[gd_scene load_steps=12 format=1]

[ext_resource path="res://scripts/title_screen.gd" type="Script" id=1]
[ext_resource path="res://assets/gui/play_button.png" type="Texture" id=2]
[ext_resource path="res://assets/gui/play_button_hover.png" type="Texture" id=3]
[ext_resource path="res://assets/gui/settings_button.png" type="Texture" id=4]
[ext_resource path="res://assets/gui/settings_button_hover.png" type="Texture" id=5]
[ext_resource path="res://assets/gui/quit_button.png" type="Texture" id=6]
[ext_resource path="res://assets/gui/quit_button_hover.png" type="Texture" id=7]
[ext_resource path="res://assets/gui/title_screen.png" type="Texture" id=8]
[ext_resource path="res://scenes/options.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/sound/sfx/ui_select.wav" type="Sample" id=10]

[sub_resource type="SampleLibrary" id=1]

samples/ui_select = {
"db": 10.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 10 )
}

[node name="title_screen" type="Node2D"]

script/script = ExtResource( 1 )

[node name="menu" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 683.0
margin/top = 577.0
margin/right = 1238.0
margin/bottom = 997.0

[node name="play" type="TextureButton" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 143.0
margin/top = 50.0
margin/right = 411.0
margin/bottom = 110.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
textures/pressed = ExtResource( 3 )
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="settings" type="TextureButton" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 165.0
margin/right = 555.0
margin/bottom = 225.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 5 )
textures/hover = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="quit" type="TextureButton" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 143.0
margin/top = 280.0
margin/right = 411.0
margin/bottom = 340.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
textures/hover = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="title" type="TextureFrame" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 359.0
margin/top = 100.0
margin/right = 960.0
margin/bottom = 307.0
texture = ExtResource( 8 )
stretch_mode = 0

[node name="options" parent="." instance=ExtResource( 9 )]

process/pause_mode = 2
visibility/visible = false
margin/left = 536.0
margin/top = 325.0
margin/right = 1384.0
margin/bottom = 755.0

[node name="sound" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="pressed" from="menu/play" to="." method="_on_play_pressed"]

[connection signal="pressed" from="menu/settings" to="." method="_on_settings_pressed"]

[connection signal="pressed" from="menu/quit" to="." method="_on_quit_pressed"]


